Fix log viewers sizing in FF3.  Apparently elements with overflow: auto (or scroll or hidden) don't do percentage widths properly in FF3.  So to workaround it, shrink the scrolling div to zero width, let the parent assume the correct size, then dynamically grab that width in pixels and set the scroller to that exact width.  Also listen for and respond to window resize events, since we're setting explicit widths.
Also had to change styles of the outermost tab frame to ensure the logs would expand to fit the window, and while i was at it, started a new common.css file for such things.

This still doesn't work in Chrome.  I'm convinced it's a Chrome bug, but I'll have to wait till I have more free time later next week to investigate.  Sorry Chrome users.



git-svn-id: svn://test.kernel.org/autotest/trunk@2962 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/afeclient.css
+++ b/frontend/client/src/autotest/public/afeclient.css
@@ -52,27 +52,6 @@ tr.data-row-clickable:hover {
   background: #FFFFBB;
 }
 
-.gwt-TabBar .gwt-TabBarItem {
-  background: #CCDDFF;
-  margin-right: 2px;
-  padding: 0.2em;
-  padding-left: 0.4em;
-  padding-right: 0.4em;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.gwt-TabBar .gwt-TabBarItem-selected {
-  background: #003399;
-  color: white;
-  cursor: default;
-}
-
-.gwt-TabPanelBottom {
-  border: 2px solid #6699FF;
-  padding: 5px;
-}
-
 .job-control {
   margin-bottom: 0.5em;
 }
